Constraintprog/minizinc-1.6/tests/type-inst-checking/minizinc/m-items-bad.mzn
% RUNS ON mzn_tc
var int:  vi = true;
var bool: vb;

vb = 3;

constraint vi;

solve maximize vb;

output vb;

predicate p(int: x) = vi;
